@@ -71,6 +71,7 @@
       editing input fields with i_<C-i>. See :h 'editor'. [b4]
     • Improved [macro-string] support, including automatic elision
       of optional elements, and array subscripts. [b4][b7]
+    • Marks are now stored as line and column ordinals rather than percentages. [b8]
     • Mapping changes:
       - It's now possible to map keys in many more modes, including
         Hint, Multi-line Output, and Menu. [b4]
